# vk_graphics_basic

./: CMakeLists.txt  PER_ASPERA_AD_ASTRA.txt  clone_dependencies.bat
resources/scenes/pine/: change_00000.xml  statex_00001.xml
resources/scenes/pine/data/: chunk_00003.vsgf  (+3 more)
resources/shaders/: Gaussian_blur.comp  Gaussian_blur.comp.spv  blur.comp  blur.comp.spv  border_highlight.geom  border_highlight.geom.spv  common.h  compile_deferred_shading_shaders.py  compile_shadowmap_shaders.py  culling.comp  culling.comp.spv  deferred_shading.frag  deferred_shading.frag.spv  diff_swap.h  fog.frag  fog.frag.spv  forward_variance_shadow.frag  forward_variance_shadow.frag.spv  gbuffer.frag  gbuffer.frag.spv  light_culling.comp  light_culling.comp.spv  my_quad.frag  noise.frag  noise.frag.spv  quad.frag  quad.frag.spv  quad.tesc  quad.tesc.spv  quad.tese  quad.tese.spv  quad3.vert  quad3.vert.spv  quad3_vert.vert  quad3_vert.vert.spv  quad_template.vert  quad_template.vert.spv  simple.comp  simple.comp.spv  simple.geom  (+36 more)
resources/shaders/old def/: deferred_shading.frag  gbuffer.frag
src/render/: render_common.h  render_imgui.cpp
src/samples/deferred_shading/: CMakeLists.txt  deferred_render.cpp  deferred_render.hpp  draw.cpp  gui.cpp  init.cpp  main.cpp  present.cpp  update.cpp
src/samples/shadowmap/: CMakeLists.txt  buffer.cpp  clean.cpp  draw.cpp  gui.cpp  init.cpp  main.cpp  pipeline.cpp  present.cpp  render_init.cpp  shadowmap_render.cpp  shadowmap_render.h  update.cpp
src/samples/simple_compute/: main.cpp  simple_compute.cpp  simple_compute.h
src/utils/: Camera.h
